[B]Version 0.1.4[/B]
- more error handling

[B]Version 0.1.3[/B]
- quick small fix for older python versions

[B]Version 0.1.2[/B]
- Schedule grabbing (turn off in plugin settings)

[B]Version 0.1.1[/B]
- Quick fix for missing large thumbnail on a channel

[B]Version 0.1.0[/B]
- Initial version