@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <settings>
-	<setting id="grab_schedule" type="bool" label="30100" default="true" />
+	<!--<setting id="grab_schedule" type="bool" label="30100" default="true" />-->
 </settings>
