@@ -1,3 +1,6 @@
+[B]Version 0.1.5[/B]
+- temporarily(?) remove schedule code due to site changes
+
 [B]Version 0.1.4[/B]
 - more error handling
 
